--- a/index.html
+++ b/index.html
@@ -139,16 +139,16 @@
         <section>
           <a
             target="_blank"
-            href="https://rank-fortress-digital-agency.github.io/happybunnieschildcare-05-22/"
-            >https://rank-fortress-digital-agency.github.io/happybunnieschildcare-05-22/</a
+            href="https://rank-fortress-digital-agency.github.io/happybunnieschildcare-06-22/"
+            >https://rank-fortress-digital-agency.github.io/happybunnieschildcare-06-22/</a
           ><br />
           <a
             target="_blank"
-            href="http://happybunnieschildcare-05-22.s3-website.ap-northeast-2.amazonaws.com"
-            >http://happybunnieschildcare-05-22.s3-website.ap-northeast-2.amazonaws.com/</a
+            href="http://happybunnieschildcare-06-22.s3-website-us-west-2.amazonaws.com"
+            >http://happybunnieschildcare-06-22.s3-website-us-west-2.amazonaws.com</a
           ><br />
-          <a target="_blank" href="https://merry-centaur-4adad6.netlify.app/"
-            >https://merry-centaur-4adad6.netlify.app/</a
+          <a target="_blank" href="https://bejewelled-gecko-6bcff1.netlify.app/"
+            >https://bejewelled-gecko-6bcff1.netlify.app/</a
           ><br />
           <a target="_blank" href="https://sites.google.com/view/happybunnieschildcareschool/"
             >https://sites.google.com/view/happybunnieschildcareschool//</a
